o Removing comment about no contributors. o Changing the promt from "$>" to "$ ".
git-svn-id: https://svn.apache.org/repos/asf/maven/components/trunk/maven-plugins@232887 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_en.properties
+++ b/src/main/resources/project-info-report_en.properties
@@ -53,7 +53,7 @@ report.team-list.intro.title=The Team
 report.team-list.intro.description1=A successful project requires many people to play many roles. Some members write code or documentation, while others are valuable as testers, submitting patches and suggestions.
 report.team-list.intro.description2=The team is comprised of Members and Contributors. Members have direct access to the source of a project and actively evolve the code-base. Contributors improve the project through submission of patches and suggestions to the Members. The number of Contributors to the project is unbounded. Get involved today. All contributions to the project are greatly appreciated.
 report.team-list.developers.title=Members
-report.team-list.nodeveloper=There are no developers working on this project. Please check back at a later date.
+report.team-list.nodeveloper=There are no developers working on this project.
 report.team-list.developers.intro=The following is a list of developers with commit privileges that have directly contributed to the project in one way or another.  
 report.team-list.developers.id=Id
 report.team-list.developers.name=Name
@@ -109,7 +109,7 @@ report.scm.accessbehindfirewall.svn.intro=For those users who are stuck behind a
 report.scm.accessbehindfirewall.cvs.intro=For those developers who are stuck behind a corporate firewall, {CVSGrab, http://cvsgrab.sourceforge.net/} can use the viewcvs web interface to checkout the source code. 
 report.scm.accessbehindfirewall.general.intro=Refer to the documentation of the SCM used for more information about an access behind a firewall.
 report.scm.accessthroughtproxy.title=Access through a proxy
-report.scm.accessthroughtproxy.svn.intro1=The Subversion client can go through a proxy, if you configure it to do so. First, edit your "servers" configuration file to indicate which proxy to use. The files location depends on your operating system. On Linux or Unix it is located in the directory "~/.subversion". On Windows it is in "%APPDATA%\Subversion". (Try "echo %APPDATA%", note this is a hidden directory.)
+report.scm.accessthroughtproxy.svn.intro1=The Subversion client can go through a proxy, if you configure it to do so. First, edit your "servers" configuration file to indicate which proxy to use. The files location depends on your operating system. On Linux or Unix it is located in the directory "~/.subversion". On Windows it is in "%APPDATA%\\Subversion". (Try "echo %APPDATA%", note this is a hidden directory.)
 report.scm.accessthroughtproxy.svn.intro2=There are comments in the file explaining what to do. If you don't have that file, get the latest Subversion client and run any command; this will cause the configuration directory and template files to be created. 
 report.scm.accessthroughtproxy.svn.intro3=Example : Edit the 'servers' file and add something like : 
 
