some work on MPIR-11 improved dependency report now a separate list is displayed for each scope, and the optional flag is shown too. Warning: this required a few new strings in project-info-report.properties, that are now missing in translations!
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@359555 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -24,6 +24,7 @@ report.dependencies.column.artifactId=ArtifactId
 report.dependencies.column.version=Version
 report.dependencies.column.description=Beschreibung
 report.dependencies.column.url=URL
+report.dependencies.column.optional=Optional
 
 report.transitivedependencies.title=Transitive Abhängigkeiten dieses Projektes
 report.transitivedependencies.nolist=Dieses Projekt erfordert keine transitiven Abhängigkeiten.
