--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -24,6 +24,7 @@ report.dependencies.column.artifactId=ArtifactId
 report.dependencies.column.version=Version
 report.dependencies.column.description=Description
 report.dependencies.column.url=URL
+report.dependencies.column.optional=Optional
 
 report.transitivedependencies.title=Dépendances transitives du projet
 report.transitivedependencies.nolist=Il n'y a aucune dépendance transitive pour ce projet.
