--- a/src/main/resources/project-info-report_ja.properties
+++ b/src/main/resources/project-info-report_ja.properties
@@ -24,6 +24,7 @@ report.dependencies.column.artifactId=成果物ID
 report.dependencies.column.version=バージョン
 report.dependencies.column.description=説明
 report.dependencies.column.url=URL
+report.dependencies.column.optional=Optional
 
 report.transitivedependencies.title=プロジェクトの過渡的依存ライブラリ
 report.transitivedependencies.nolist=このプロジェクトに必要な過渡的依存ライブラリはありません。
