--- a/src/main/resources/project-info-report_pl.properties
+++ b/src/main/resources/project-info-report_pl.properties
@@ -24,6 +24,7 @@ report.dependencies.column.artifactId=ID artefaktu (ArtifactId)
 report.dependencies.column.version=Wersja (Version)
 report.dependencies.column.description=Opis (Description)
 report.dependencies.column.url=Adres (URL)
+report.dependencies.column.optional=Optional
 
 report.transitivedependencies.title=Zale\u017cno\u015bci przechodnie projektu
 report.transitivedependencies.nolist=\u017badne zale\u017cno\u015bci przechodnie nie s\u0105 wymagane dla tego projektu.
