Added French translation for missing properties
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@382384 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -26,9 +26,15 @@ report.dependencies.column.description=Description
 report.dependencies.column.url=URL
 report.dependencies.column.optional=Optional
 
+report.dependencies.intro.runtime=Ce qui suit est la liste des dépendances de portée runtime pour ce projet. Ces dépendances sont requises pour exécuter l'application:
+report.dependencies.intro.compile=Ce qui suit est la liste des dépendances de portée compile pour ce projet. Ces dépendances sont requises pour compiler et exécuter l'application:
+report.dependencies.intro.test=Ce qui suit est la liste des dépendances de portée test pour ce projet. Ces dépendances sont requises seulement pour compiler et exécuter les tests unitaires de l'application:
+report.dependencies.intro.provided=Ce qui suit est la liste des dépendances de portée provided pour ce projet. Ces dépendances sont requises pour compiler l'application, mais devrait être fourni par défaut lors de l'utilisation de cette librairie:
+report.dependencies.intro.system=Ce qui suit est la liste des dépendances de portée system pour ce projet. Ces dépendances sont requises pour compiler l'application:
+
 report.transitivedependencies.title=Dépendances transitives du projet
 report.transitivedependencies.nolist=Il n'y a aucune dépendance transitive pour ce projet.
-report.transitivedependencies.intro=Ce qui suit est la liste de dépendances transitives pour ce projet. Les dépendances transitives sont les dépendances des dépendances du projet :
+report.transitivedependencies.intro=Ce qui suit est la liste des dépendances transitives pour ce projet. Les dépendances transitives sont les dépendances des dépendances du projet :
 report.transitivedependencies.column.groupId=GroupId
 report.transitivedependencies.column.artifactId=ArtifactId
 report.transitivedependencies.column.version=Version
@@ -122,6 +128,7 @@ report.issuetracking.jira.intro=Ce projet utilise {Jira, http://www.atlassian.co
 report.issuetracking.bugzilla.intro=Ce projet utilise {Bugzilla, http://www.bugzilla.org/}.
 report.issuetracking.scarab.intro=Ce projet utilise {Scarab, http://scarab.tigris.org/}.
 report.issuetracking.general.intro=Ce projet utilise système de contrôle des livraisons pour gérer ces issues.
+report.issuetracking.custom.intro=Ce projet utilise %issueManagementSystem% pour gérer ces issues.
 report.issuetracking.title=Contrôle des livraisons
 report.issuetracking.intro=Des issues (bogues, dispositifs, demandes de changement) peuvent être créées et questionnées en utilisant ce lien.
 
@@ -149,3 +156,22 @@ report.license.nolicense=Aucune license n'est définie pour ce projet.
 report.license.title=License du projet
 report.license.overview.title=Vue d'ensemble
 report.license.overview.intro=Typiquement les licenses énumérés pour ce projet sont celle du projet lui-même, et non celles des dépendances.
+
+report.dependency-convergence.name=Convergence des dépendances
+report.dependency-convergence.description=Ce document présente la convergence des versions des dépendances à travers le projet entier, et de ses sous modules.
+report.dependency-convergence.title=Réaction de la convergence des dépendances
+report.dependency-convergence.legend=Légende
+report.dependency-convergence.legend.shared=Tous les projets partagent une dépendance de version.
+report.dependency-convergence.legend.different=Au moins un projet a une dépendance de version différente.
+report.dependency-convergence.stats.caption=Statistiques
+report.dependency-convergence.stats.subprojects=Nombre de sous projets
+report.dependency-convergence.stats.dependencies=Nombre de dépendances (NOD)
+report.dependency-convergence.stats.artifacts=Nombre d'artefacts uniques (NOA)
+report.dependency-convergence.stats.snapshots=Nombre d'artefacts SNAPSHOT (NOS)
+report.dependency-convergence.stats.convergence=Convergence (NOD/NOA)
+report.dependency-convergence.stats.readyrelease=Près pour la release (100% de convergence et aucun SNAPSHOTS)
+report.dependency-convergence.stats.readyrelease.success=Succès
+report.dependency-convergence.stats.readyrelease.error=Erreur
+report.dependency-convergence.stats.readyrelease.error.convergence=Vous n'avez pas la convergence à 100%.
+report.dependency-convergence.stats.readyrelease.error.snapshots=Vous avez des dépendances de type SNAPSHOT.
+report.dependency-convergence.convergence.caption=Dépendances utilisées dans les sous projets
