o Spell JIRA with capital letters.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@556753 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -119,7 +119,7 @@ report.issuetracking.name=Problembehandlung
 report.issuetracking.description=Informationen \u00FCber das Problem Management System dieses Projektes. Probleme (Bugs, Features, \u00C4nderungsw\u00FCnsche) k\u00F6nnen hier erstellt und abgefragt werden.
 report.issuetracking.noissueManagement=F\u00FCr dieses Projekt wurde kein Problem Management System definiert. Bitte schauen Sie sp\u00E4ter nochmals vorbei.
 report.issuetracking.overview.title=\u00DCbersicht
-report.issuetracking.jira.intro=Dieses Projekt verwendet {Jira, http://www.atlassian.com/software/jira}, eine auf J2EE basierende Problem Management Anwendung.
+report.issuetracking.jira.intro=Dieses Projekt verwendet {JIRA, http://www.atlassian.com/software/jira}, eine auf J2EE basierende Problem Management Anwendung.
 report.issuetracking.bugzilla.intro=Dieses Projekt verwendet {Bugzilla, http://www.bugzilla.org/}.
 report.issuetracking.scarab.intro=Dieses Projekt verwendet {Scarab, http://scarab.tigris.org/}.
 report.issuetracking.general.intro=Dieses Projekt verwendet ein Problem Management System.
