--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -91,7 +91,7 @@ report.issuetracking.custom.intro                                  = Ce projet u
 report.issuetracking.description                                   = C\u0092est un lien au syst\u00E8me de contr\u00F4le des livraisons pour ce projet. Des issues (bogues, dispositifs, demandes de changement) peuvent \u00EAtre cr\u00E9\u00E9es et consult\u00E9es en utilisant ce lien.
 report.issuetracking.general.intro                                 = Ce projet utilise syst\u00E8me de contr\u00F4le des livraisons pour g\u00E9rer ces issues.
 report.issuetracking.intro                                         = Des issues (bogues, dispositifs, demandes de changement) peuvent \u00EAtre cr\u00E9\u00E9es et consult\u00E9es en utilisant ce lien.
-report.issuetracking.jira.intro                                    = Ce projet utilise {Jira, http://www.atlassian.com/software/jira}, une application J2EE de contr\u00F4le des livraisons et de gestion de projet.
+report.issuetracking.jira.intro                                    = Ce projet utilise {JIRA, http://www.atlassian.com/software/jira}, une application J2EE de contr\u00F4le des livraisons et de gestion de projet.
 report.issuetracking.name                                          = Contr\u00F4le des livraisons
 report.issuetracking.noissueManagement                             = Aucun syst\u00E8me de contr\u00F4le des livraisons n\u0092est d\u00E9fini. V\u00E9rifiez plus tard si un syst\u00E8me de contr\u00F4le des livraisons a \u00E9t\u00E9 ajout\u00E9.
 report.issuetracking.overview.title                                = Vue d\u0092ensemble
