--- a/src/main/resources/project-info-report_hu.properties
+++ b/src/main/resources/project-info-report_hu.properties
@@ -91,7 +91,7 @@ report.issuetracking.custom.intro                                  = Ez a projek
 report.issuetracking.description                                   = Link a projekt hibak\u00C3\u00B6vet\u00C5\u0091 rendszer\u00C3\u00A9re:
 report.issuetracking.general.intro                                 = Ez a projekt hibak\u00C3\u00B6vet\u00C5\u0091 rendszert haszn\u00C3\u00A1l a hib\u00C3\u00A1k \u00C3\u00A9s feladatok k\u00C3\u00B6vet\u00C3\u00A9s\u00C3\u00A9re.
 report.issuetracking.intro                                         = Hib\u00C3\u00A1k \u00C3\u00A9s fejleszt\u00C3\u00A9si k\u00C3\u00A9r\u00C3\u00A9sek a k\u00C3\u00B6vetkez\u00C5\u0091 cimre k\u00C3\u00BCldend\u00C5\u0091ek:
-report.issuetracking.jira.intro                                    = Ez a projekt {Jira, http://www.atlassian.com/software/jira} hibak\u00C3\u00B6vet\u00C5\u0091 rendszert haszn\u00C3\u00A1l, amely J2EE alap\u00C3\u00BA.
+report.issuetracking.jira.intro                                    = Ez a projekt {JIRA, http://www.atlassian.com/software/jira} hibak\u00C3\u00B6vet\u00C5\u0091 rendszert haszn\u00C3\u00A1l, amely J2EE alap\u00C3\u00BA.
 report.issuetracking.name                                          = Hibak\u00C3\u00B6vet\u00C3\u00A9s
 report.issuetracking.noissueManagement                             = Nincs hibak\u00C3\u00B6vet\u00C5\u0091 rendszer megadva, l\u00C3\u00A1togass vissza k\u00C3\u00A9s\u00C5\u0091bb!
 report.issuetracking.overview.title                                = \u00C3\u0081ttekint\u00C3\u00A9s
