--- a/src/main/resources/project-info-report_no.properties
+++ b/src/main/resources/project-info-report_no.properties
@@ -91,7 +91,7 @@ report.issuetracking.custom.intro                                  = Dette prosj
 report.issuetracking.description                                   = Dette er en lenke til saks handterings systemet for dette prosjektet. Saker (feil, forbedringer, endringsanmodninger) kan lages og sp\u00F8rres p\u00E5 via denne lenken.
 report.issuetracking.general.intro                                 = Dette prosjektet bruker et saks handterings system for \u00E5 administrere dets saker.
 report.issuetracking.intro                                         = Saker, feil og forbedringsanmodninger b\u00F8r sendes til f\u00F8lgende saks handterings system for dette prosjektet.
-report.issuetracking.jira.intro                                    = Dette prosjektet bruker {Jira, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
+report.issuetracking.jira.intro                                    = Dette prosjektet bruker {JIRA, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
 report.issuetracking.name                                          = Sakshandtering
 report.issuetracking.noissueManagement                             = Intet saks handterings system er definert. Vennligst sjekk igjen senere.
 report.issuetracking.overview.title                                = Oversikt
