--- a/src/main/resources/project-info-report_pt_BR.properties
+++ b/src/main/resources/project-info-report_pt_BR.properties
@@ -78,7 +78,7 @@ report.issuetracking.custom.intro                                  = Este projet
 report.issuetracking.description                                   = Este \u00C3\u00A9 o endere\u00C3\u00A7o para o controle de requisi\u00C3\u00A7\u00C3\u00B5es deste projeto. Requisi\u00C3\u00A7\u00C3\u00B5es (defeitos, funcionalidades, requisi\u00C3\u00A7\u00C3\u00B5es de altera\u00C3\u00A7\u00C3\u00A3o) podem ser criadas e pesquisadas utlizando o endere\u00C3\u00A7o..
 report.issuetracking.general.intro                                 = Este projeto utiliza um gerenciador de requisi\u00C3\u00A7\u00C3\u00B5es para controlar as requisi\u00C3\u00A7\u00C3\u00B5es.
 report.issuetracking.intro                                         = Requisi\u00C3\u00A7\u00C3\u00B5es, defeitos, e funcionalidades podem ser submetidas para o seguinte sistema de gerenciamento de requisi\u00C3\u00A7\u00C3\u00B5es.
-report.issuetracking.jira.intro                                    = Este projeto utiliza o {Jira, http://www.atlassian.com/software/jira}.
+report.issuetracking.jira.intro                                    = Este projeto utiliza o {JIRA, http://www.atlassian.com/software/jira}.
 report.issuetracking.name                                          = Controle de Requisi\u00C3\u00A7\u00C3\u00B5es
 report.issuetracking.noissueManagement                             = Nenhum controlador de requisi\u00C3\u00A7\u00C3\u00B5es est\u00C3\u00A1 definido. Por favor verifique numa data futura.
 report.issuetracking.overview.title                                = Vis\u00C3\u00A3o Geral
