--- a/src/main/resources/project-info-report_sk.properties
+++ b/src/main/resources/project-info-report_sk.properties
@@ -112,7 +112,7 @@ report.issuetracking.custom.intro                                  = Tento proje
 report.issuetracking.description                                   = Adresa syst\u00e9mu sledovania probl\u00e9mov, spravuj\u00faceho tento projekt. Probl\u00e9my (chyby, nov\u00e9 vlastnosti, zmeny, n\u00e1vrhy) m\u00f4\u017eu by\u0165 vytvoren\u00e9 a s\u00fa dostupn\u00e9 na tejto adrese.
 report.issuetracking.general.intro                                 = Tento projekt pou\u017e\u00edva syst\u00e9m mene\u017ementu probl\u00e9mov.
 report.issuetracking.intro                                         = Probl\u00e9my, chyby a po\u017eiadavky na nov\u00fa funkcionalitu by mali by\u0165 zaregistrovan\u00e9 do nasledovn\u00e9ho syst\u00e9mu na sledovanie probl\u00e9mov.
-report.issuetracking.jira.intro                                    = Tento projekt pou\u017e\u00edva {Jira, http://www.atlassian.com/software/jira} - aplik\u00e1ciu postaven\u00fa na J2EE, sl\u00fa\u017eiacu na sledovanie probl\u00e9mov a mene\u017eovanie projektov.
+report.issuetracking.jira.intro                                    = Tento projekt pou\u017e\u00edva {JIRA, http://www.atlassian.com/software/jira} - aplik\u00e1ciu postaven\u00fa na J2EE, sl\u00fa\u017eiacu na sledovanie probl\u00e9mov a mene\u017eovanie projektov.
 report.issuetracking.name                                          = Syst\u00e9m sledovania probl\u00e9mov
 report.issuetracking.noissueManagement                             = \u017diadny syst\u00e9m na sledovanie probl\u00e9mov nie je definovan\u00fd. Pros\u00edm sk\u00faste nesk\u00f4r.
 report.issuetracking.overview.title                                = Preh\u013ead
