--- a/src/main/resources/project-info-report_pl.properties
+++ b/src/main/resources/project-info-report_pl.properties
@@ -55,7 +55,7 @@ report.issuetracking.bugzilla.intro              = Projekt ten korzysta z system
 report.issuetracking.description                 = Poni\u017Cej znajduje si\u0119 \u0142\u0105cze do systemu \u015Bledzenia zada\u0144 (issue management system) dla tego projektu. Zadania (b\u0142\u0119dy, rozbudowa funkcjonalno\u015Bci, pro\u015Bby o zmiany) mog\u0105 by\u0107 dodawane i wyszukiwane pod podanym adresem.
 report.issuetracking.general.intro               = Projekt ten korzysta z systemu \u015Bledzenia zada\u0144 (Issue Management System) do zarz\u0105dzania swoimi zadaniami.
 report.issuetracking.intro                       = Zdania, b\u0142\u0119dy i pro\u015Bby o now\u0105 funkcjonalno\u015B\u0107 tego projektu powinny by\u0107 zg\u0142aszane przez system \u015Bledzenia zada\u0144 (issue tracking system).
-report.issuetracking.jira.intro                  = Projekt ten korzysta z systemu {Jira, http://www.atlassian.com/software/jira} - aplikacji (opartej o architektur\u0119 J2EE) do \u015Bledzenia zada\u0144 i zarz\u0105dzania projektami.
+report.issuetracking.jira.intro                  = Projekt ten korzysta z systemu {JIRA, http://www.atlassian.com/software/jira} - aplikacji (opartej o architektur\u0119 J2EE) do \u015Bledzenia zada\u0144 i zarz\u0105dzania projektami.
 report.issuetracking.name                        = System \u015Bledzenia zada\u0144 (Issue Tracking)
 report.issuetracking.noissueManagement           = Nie zdefiniowano systemu \u015Bledzenia zada\u0144. Prosz\u0119 spr\u00F3bowa\u0107 w p\u00F3\u017Aniejszym terminie.
 report.issuetracking.overview.title              = Przegl\u0105d
