--- a/src/main/resources/project-info-report_zh_CN.properties
+++ b/src/main/resources/project-info-report_zh_CN.properties
@@ -79,7 +79,7 @@ report.issuetracking.custom.intro                                  = \u672C\u987
 report.issuetracking.description                                   = \u8FD9\u662F\u672C\u9879\u76EE\u4E2D\u7684\u95EE\u9898\u7BA1\u7406\u7CFB\u7EDF\u7684\u94FE\u63A5\u3002\u7528\u6237\u53EF\u4EE5\u5728\u8FD9\u91CC\u8FDB\u884C\u95EE\u9898(\u6545\u969C\u3001\u7279\u6027\u3001\u53D8\u66F4\u8BF7\u6C42)\u7684\u521B\u5EFA\u548C\u67E5\u8BE2\u3002
 report.issuetracking.general.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528\u95EE\u9898\u7BA1\u7406\u7CFB\u7EDF\u7BA1\u7406\u9879\u76EE\u4E2D\u7684\u95EE\u9898\u3002
 report.issuetracking.intro                                         = \u95EE\u9898\u3001\u6545\u969C\u548C\u65B0\u7279\u6027\u8BF7\u6C42\u8BF7\u901A\u8FC7\u4E0B\u8FF0\u7684\u672C\u9879\u76EE\u7684\u95EE\u9898\u8DDF\u8E2A\u7CFB\u7EDF\u63D0\u4EA4\u3002
-report.issuetracking.jira.intro                                    = \u672C\u9879\u76EE\u4F7F\u7528{Jira, http://www.atlassian.com/software/jira}\u8FD9\u4E00\u57FA\u4E8EJ2EE\u7684\u95EE\u9898\u8DDF\u8E2A\u548C\u9879\u76EE\u7BA1\u7406\u7CFB\u7EDF\u3002
+report.issuetracking.jira.intro                                    = \u672C\u9879\u76EE\u4F7F\u7528{JIRA, http://www.atlassian.com/software/jira}\u8FD9\u4E00\u57FA\u4E8EJ2EE\u7684\u95EE\u9898\u8DDF\u8E2A\u548C\u9879\u76EE\u7BA1\u7406\u7CFB\u7EDF\u3002
 report.issuetracking.name                                          = \u95EE\u9898\u8DDF\u8E2A
 report.issuetracking.noissueManagement                             = \u6CA1\u6709\u5B9A\u4E49\u95EE\u9898\u7BA1\u7406\u7CFB\u7EDF\u3002\u8BF7\u8FC7\u4E00\u6BB5\u65F6\u95F4\u518D\u67E5\u770B\u3002
 report.issuetracking.overview.title                                = \u6982\u8FF0
