o Remove unused properties and use the correct name for a few others.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@574088 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -16,7 +16,6 @@
 # under the License.
 
 report.cim.access                                                  = Zugriff
-report.cim.bugzilla.intro                                          = Dieses Projekt verwendet {Bugzilla, http://www.bugzilla.org/}.
 report.cim.continuum.intro                                         = Dieses Projekt verwendet {Continuum, http://maven.apache.org/continuum/}.
 report.cim.description                                             = Informationen \u00FCber das Continuous Integration System dieses Projektes.
 report.cim.general.intro                                           = Dieses Projekt verwendet ein Continuous Integration System.
@@ -44,7 +43,6 @@ report.dependencies.description                                    = Information
 report.dependencies.graph.tables.title                             = Aufstellung der Abh\u00E4ngigkeiten
 report.dependencies.graph.title                                    = Abh\u00E4ngigkeitsgraph
 report.dependencies.graph.tree.title                               = Abh\u00E4ngigkeitsbaum
-report.dependencies.intro                                          = Es folgt eine Liste der Abh\u00E4ngigkeiten dieses Projektes. Diese Abh\u00E4ngigkeiten m\u00FCssen zur Verf\u00FCgung stehen, um das Projekt zu kompilieren oder laufen zu lassen\:
 report.dependencies.intro.compile                                  = Es folgt eine Liste der Kompilierabh\u00E4ngigkeiten dieses Projektes. Diese Abh\u00E4ngigkeiten werden zur Kompilierung und zur Laufzeit des Projektes ben\u00F6tigt\:
 report.dependencies.intro.provided                                 = Es folgt eine Liste der zur Verf\u00FCgung zu stellenden Abh\u00E4ngigkeiten dieses Projektes. Diese Abh\u00E4ngigkeiten werden zur Kompilierung des Projektes ben\u00F6tigt und m\u00FCssen zur Laufzeit manuell zur Verf\u00FCgung gestellt werden\:
 report.dependencies.intro.runtime                                  = Es folgt eine Liste der Laufzeitabh\u00E4ngigkeiten dieses Projektes. Diese Abh\u00E4ngigkeiten werden zur Laufzeit des Projektes ben\u00F6tigt\:
@@ -121,7 +119,7 @@ report.scm.devaccess.cvs.intro                                     = Nur Projekt
 report.scm.devaccess.general.intro                                 = Konsultieren Sie die Dokumentation des verwendeten Quellcode Archiv Management Systems f\u00FCr weitere Informationen \u00FCber Entwickler Zugriff unter\:
 report.scm.devaccess.perforce.intro                                = Nur Projekt Entwickler k\u00F6nnen mit dieser Methode auf den Perforce Baum zugreifen. Ersetzen Sie 'username' mit dem entsprechenden Wert.
 report.scm.devaccess.starteam.intro                                = Nur Projekt Entwickler k\u00F6nnen mit dieser Methode auf den Starteam Baum zugreifen. Ersetzen Sie 'username' mit dem entsprechenden Wert.
-report.scm.devaccess.svn.intro1                                    = Jeder kann auf das Subversion Archiv via HTTPS zugreifen, aber Entwickler m\u00FCssen das Subversion Archiv via HTTPS auschecken.
+report.scm.devaccess.svn.intro1.https                              = Jeder kann auf das Subversion Archiv via HTTPS zugreifen, aber Entwickler m\u00FCssen das Subversion Archiv via HTTPS auschecken.
 report.scm.devaccess.svn.intro2                                    = Verwenden Sie folgenden Befehl um \u00C4nderungen in das Archiv zu \u00FCbertragen (SVN wird Sie nach einem Passwort fragen)\:
 report.scm.devaccess.title                                         = Entwickler Zugriff
 report.scm.general.intro                                           = Dieses Projekt verwendet ein Quellcode Archiv Management System um seinen Quellcode zu verwalten.
@@ -183,11 +181,6 @@ report.team-list.name                                              = Projektteam
 report.team-list.nocontributor                                     = F\u00FCr dieses Projekt sind keine Beteiligten definiert. Bitte schauen Sie sp\u00E4ter nochmals vorbei.
 report.team-list.nodeveloper                                       = An diesem Projekt arbeiten zur Zeit keine Entwickler.
 report.team-list.title                                             = Team Liste
-report.transitivedependencies.column.artifactId                    = ArtifactId
-report.transitivedependencies.column.description                   = Beschreibung
-report.transitivedependencies.column.groupId                       = GroupId
-report.transitivedependencies.column.url                           = URL
-report.transitivedependencies.column.version                       = Version
 report.transitivedependencies.intro                                = Es folgen die transitiven Abh\u00E4ngigkeiten dieses Projektes. Transitive Abh\u00E4ngigkeiten sind Abh\u00E4ngigkeiten der nicht transitiven Abh\u00E4ngigkeiten\:
 report.transitivedependencies.nolist                               = Dieses Projekt erfordert keine transitiven Abh\u00E4ngigkeiten.
 report.transitivedependencies.title                                = Transitive Abh\u00E4ngigkeiten dieses Projektes
