[MPIR-34] Update german language bundle
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@597919 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_de.properties
+++ b/src/main/resources/project-info-report_de.properties
@@ -16,9 +16,14 @@
 # under the License.
 
 report.cim.access                                                  = Zugriff
+report.cim.anthill.intro                                           = Dieses Projekt verwendet {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
+report.cim.buildforge.intro                                        = Dieses Projekt verwendet {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
 report.cim.continuum.intro                                         = Dieses Projekt verwendet {Continuum, http://maven.apache.org/continuum/}.
+report.cim.cruisecontrol.intro                                     = Dieses Projekt verwendet {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.cim.description                                             = Informationen \u00FCber das Continuous Integration System dieses Projektes.
 report.cim.general.intro                                           = Dieses Projekt verwendet ein Continuous Integration System.
+report.cim.hudson.intro                                            = Dieses Projekt verwendet {Hudson, https://hudson.dev.java.net/}.
+report.cim.luntbuild.intro                                         = Dieses Projekt verwendet {Luntbuild, http://luntbuild.javaforge.com/}.
 report.cim.name                                                    = Continuous Integration
 report.cim.nocim                                                   = Es wurde kein Continuous Integration Management System definiert. Bitte schauen Sie sp\u00E4ter nochmals vorbei.
 report.cim.notifiers.column.address                                = Adresse
@@ -40,7 +45,18 @@ report.dependencies.column.type                                    = Typ
 report.dependencies.column.url                                     = URL
 report.dependencies.column.version                                 = Version
 report.dependencies.description                                    = Informationen \u00FCber die Abh\u00E4ngigkeiten dieses Projektes.
+report.dependencies.file.details.column.classes                    = Klassen
+report.dependencies.file.details.column.debug                      = Debug
+report.dependencies.file.details.column.entries                    = Eintragungen
+report.dependencies.file.details.column.file                       = Datei Name
+report.dependencies.file.details.column.jdkrev                     = JDK Revision
+report.dependencies.file.details.column.packages                   = Packete
+report.dependencies.file.details.column.sealed                     = Versiegelt
+report.dependencies.file.details.column.size                       = Gr\u00F6sse
+report.dependencies.file.details.title                             = Details zur Abh\u00E4ngigkeit
+report.dependencies.graph.tables.licenses                          = Lizensen
 report.dependencies.graph.tables.title                             = Aufstellung der Abh\u00E4ngigkeiten
+report.dependencies.graph.tables.unknown                           = Unbekannt
 report.dependencies.graph.title                                    = Abh\u00E4ngigkeitsgraph
 report.dependencies.graph.tree.title                               = Abh\u00E4ngigkeitsbaum
 report.dependencies.intro.compile                                  = Es folgt eine Liste der Kompilierabh\u00E4ngigkeiten dieses Projektes. Diese Abh\u00E4ngigkeiten werden zur Kompilierung und zur Laufzeit des Projektes ben\u00F6tigt\:
@@ -50,7 +66,19 @@ report.dependencies.intro.system                                   = Es folgt ei
 report.dependencies.intro.test                                     = Es folgt eine Liste der Testabh\u00E4ngigkeiten dieses Projektes. Diese Abh\u00E4ngigkeiten werden ausschlie\u00DFlich zur Kompilierung und Ausf\u00FChrung von Tests des Projektes ben\u00F6tigt\:
 report.dependencies.name                                           = Abh\u00E4ngigkeiten
 report.dependencies.nolist                                         = F\u00FCr dieses Projekt existieren keine Abh\u00E4ngigkeiten. Es ist ein eigenst\u00E4ndiges Projekt ohne externe Abh\u00E4ngigkeiten.
+report.dependencies.repo.locations.artifact.breakdown              = Der Archiv-Ort f\u00FCr jede Abh\u00E4ngigkeit.
+report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.enabled            = Ja
+report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.enabled           = Ja
+report.dependencies.repo.locations.column.artifact                 = Artifact
+report.dependencies.repo.locations.column.release                  = Version
+report.dependencies.repo.locations.column.repoid                   = Archiv ID
+report.dependencies.repo.locations.column.snapshot                 = SNAPSHOT
+report.dependencies.repo.locations.column.url                      = URL
+report.dependencies.repo.locations.title                           = Archiv-Ort der Abh\u00E4ngigkeit.
 report.dependencies.title                                          = Abh\u00E4ngigkeiten dieses Projektes
+report.dependencies.unamed                                         = Namenlos
 report.dependency-convergence.convergence.caption                  = In Unter-Projekten verwendete Abh\u00E4ngigkeiten
 report.dependency-convergence.description                          = Dieses Dokument informiert \u00FCber die Konvergenz der Versionen von Abh\u00E4ngigkeiten des gesamten Projektes inklusive seiner Module.
 report.dependency-convergence.legend                               = Legende:
@@ -120,6 +148,9 @@ report.scm.devaccess.general.intro                                 = Konsultiere
 report.scm.devaccess.perforce.intro                                = Nur Projekt Entwickler k\u00F6nnen mit dieser Methode auf den Perforce Baum zugreifen. Ersetzen Sie 'username' mit dem entsprechenden Wert.
 report.scm.devaccess.starteam.intro                                = Nur Projekt Entwickler k\u00F6nnen mit dieser Methode auf den Starteam Baum zugreifen. Ersetzen Sie 'username' mit dem entsprechenden Wert.
 report.scm.devaccess.svn.intro1.https                              = Jeder kann auf das Subversion Archiv via HTTPS zugreifen, aber Entwickler m\u00FCssen das Subversion Archiv via HTTPS auschecken.
+report.scm.devaccess.svn.intro1.other                              = Entwickler m\u00FCssen das Subversion Archiv auschecken.
+report.scm.devaccess.svn.intro1.svn                                = Entwickler m\u00FCssen das Subversion Archiv via SVN auschecken.
+report.scm.devaccess.svn.intro1.svnssh                             = Entwickler m\u00FCssen das Subversion Archiv via SVN+SSH auschecken.
 report.scm.devaccess.svn.intro2                                    = Verwenden Sie folgenden Befehl um \u00C4nderungen in das Archiv zu \u00FCbertragen (SVN wird Sie nach einem Passwort fragen)\:
 report.scm.devaccess.title                                         = Entwickler Zugriff
 report.scm.general.intro                                           = Dieses Projekt verwendet ein Quellcode Archiv Management System um seinen Quellcode zu verwalten.
@@ -148,6 +179,7 @@ report.summary.name                                                = Zusammenfas
 report.summary.organization.name                                   = Name
 report.summary.organization.title                                  = Projekt Organisation
 report.summary.organization.url                                    = URL
+report.summary.noorganization                                      = Dieses Projekt wird von keiner Organisation verwaltet.
 report.summary.title                                               = Zusammenfassung
 report.summary.value                                               = Wert
 report.team-list.contributors.actualtime                           = Tats\u00E4chliche Zeit (GMT)
